Made a docker file for deployment on render server